// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders as default 1`] = `
.emotion-0 {
  font: var(--echoes-typography-display-default);
  color: var(--echoes-color-text-strong);
}

<span
  class="emotion-0 emotion-1"
>
  hi there
</span>
`;

exports[`renders as div 1`] = `
.emotion-0 {
  font: var(--echoes-typography-display-default);
  color: var(--echoes-color-text-strong);
}

<div
  class="emotion-0 emotion-1"
>
  hi there
</div>
`;

exports[`renders as paragraph 1`] = `
.emotion-0 {
  font: var(--echoes-typography-display-default);
  color: var(--echoes-color-text-strong);
}

<p
  class="emotion-0 emotion-1"
>
  hi there
</p>
`;

exports[`renders as span 1`] = `
.emotion-0 {
  font: var(--echoes-typography-display-default);
  color: var(--echoes-color-text-strong);
}

<span
  class="emotion-0 emotion-1"
>
  hi there
</span>
`;
